--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,33 +3,15 @@ project(computer-graphics-4 C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(${PROJECT_NAME}
-        main.c
-        common.c
-        clay_renderer_raylib.c
-        vector.h
-        task1.c
-        task2.c
-        task3.c
-        llist.h
-        stack.h
-        Polyhedron.c
-        Polyhedron.h
-        scene.h
-        scene.c
-        camera.h
-        camera.c
-)
+file(GLOB source_files *.c)
+file(GLOB glad_files third_party/glad/*.c)
 
-file(GLOB RAYLIB_FILES "third_party/lib/*raylib.*")
-list(GET RAYLIB_FILES 0 RAYLIB_FILE)
+add_executable(${PROJECT_NAME} ${source_files} ${glad_files})
 
-add_library(raylib STATIC IMPORTED)
-set_target_properties(raylib PROPERTIES
-        IMPORTED_LOCATION ${RAYLIB_FILE}
-)
+target_include_directories(${PROJECT_NAME} PUBLIC third_party)
 
-target_link_libraries(${PROJECT_NAME} raylib)
+target_link_directories(${PROJECT_NAME} PUBLIC third_party)
+target_link_libraries(${PROJECT_NAME} glfw)
 
 if (APPLE)
     target_link_libraries(${PROJECT_NAME} "-framework IOKit")
