--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,23 +3,7 @@ project(computer-graphics-4 C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(${PROJECT_NAME}
-        main.c
-        common.c
-        clay_renderer_raylib.c
-        vector.h
-        task1.c
-        task2.c
-        task3.c
-        llist.h
-        stack.h
-        Polyhedron.c
-        Polyhedron.h
-        scene.h
-        scene.c
-        camera.h
-        camera.c
-)
+include_directories(${CMAKE_SOURCE_DIR}/third_party/include)
 
 file(GLOB RAYLIB_FILES "third_party/lib/*raylib.*")
 list(GET RAYLIB_FILES 0 RAYLIB_FILE)
@@ -27,6 +11,12 @@ list(GET RAYLIB_FILES 0 RAYLIB_FILE)
 add_library(raylib STATIC IMPORTED)
 set_target_properties(raylib PROPERTIES
         IMPORTED_LOCATION ${RAYLIB_FILE}
+)
+
+add_executable(${PROJECT_NAME}
+        main.c
+        cornell_box.c
+        cornell_box.h
 )
 
 target_link_libraries(${PROJECT_NAME} raylib)
